patch [#32195] MASKS: Canonical Porter Duff algorithm for merge missing. from Troy Sobotka (sobotka)

This gives nicer blending then 'ADD', setting as default for new masks.